# expected-disposal-model

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_data_preparation.ipynb  02_classification_model_building.ipynb  03_classification_model_evaluation.ipynb  04_exploration.ipynb  05_predict_model.ipynb  05_predict_player_stats.ipynb  plotting_actions.ipynb
src/expected_disposal_model/: config.py  modelling_data_contract.py
src/expected_disposal_model/data_preparation/: data_preprocessor.py  preprocessing.py
src/expected_disposal_model/modelling/: supermodel.py
src/expected_disposal_model/scoring/: predict_model.py  predict_player_stats.py
src/expected_disposal_model/visualisation/: style_config.py
