[project]
name = "expected-disposal-model"
description = "Building and analysing an expected disposal model."
readme = "README.md"
license = {file = "LICENSE"}
version = "0.1.0"
authors = [
    { name = "Ciaran Grant", email = "ciaran.grant@hotmail.co.uk" }
]
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "numpy",
    "joblib",
    "matplotlib",
    "seaborn",
    "xgboost",
    "optuna",
    "betacal"
]

[tools.setuptools]
packages = ['expected_disposal_model']